[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Main Characters/Ninja Frog/Idle (32x32).png" type="Texture" id=2]
[ext_resource path="res://Assets/Main Characters/Ninja Frog/Jump (32x32).png" type="Texture" id=3]
[ext_resource path="res://Assets/Main Characters/Ninja Frog/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://Assets/Main Characters/Ninja Frog/Hit (32x32).png" type="Texture" id=5]
[ext_resource path="res://Assets/Main Characters/Ninja Frog/Fall (32x32).png" type="Texture" id=6]
[ext_resource path="res://Assets/Other/Dust Particle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Other/Shadow.png" type="Texture" id=8]
[ext_resource path="res://Assets/Main Characters/Ninja Frog/Wall Jump (32x32).png" type="Texture" id=9]
[ext_resource path="res://Assets/Sounds/jump1.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/enemy_hit.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Fonts/KaushanScript-Regular.ttf" type="DynamicFontData" id=12]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.324561, 0.622807, 0.982456 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 0.749023, 0.749023, 0.749023, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0.279141 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 0.8
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.315789, 0.719298, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.941176, 0.65098, 0.643137, 0.643137, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0.00572519, 0.42638 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 0.8
scale_curve = SubResource( 17 )
color_ramp = SubResource( 15 )

[sub_resource type="Animation" id=1]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=19]
resource_name = "climb"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 9.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11.5, 10 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 10, 1.5 )

[sub_resource type="DynamicFont" id=21]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 12 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_mask = 94
script = ExtResource( 1 )

[node name="steps_fx" type="Particles2D" parent="."]
visible = false
position = Vector2( -1, 13 )
rotation = 3.14159
scale = Vector2( 1, -1 )
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
randomness = 0.8
process_material = SubResource( 13 )
texture = ExtResource( 7 )

[node name="climb_fx" type="Particles2D" parent="."]
position = Vector2( 0, 4 )
emitting = false
lifetime = 0.5
one_shot = true
randomness = 0.8
process_material = SubResource( 18 )
texture = ExtResource( 7 )

[node name="Shadow" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, 14 )
scale = Vector2( 0.9375, 0.375 )
texture = ExtResource( 8 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 11

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/climb = SubResource( 19 )
anims/fall = SubResource( 7 )
anims/hit = SubResource( 6 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 6.5 )
shape = SubResource( 3 )

[node name="raycasts" type="Node2D" parent="."]

[node name="raycast" type="RayCast2D" parent="raycasts"]
position = Vector2( -7, 10 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 24

[node name="raycast2" type="RayCast2D" parent="raycasts"]
position = Vector2( 8, 10 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 24

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.2, 1.2 )
limit_left = -16
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.25
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="climb" type="RayCast2D" parent="."]
position = Vector2( 0, 10 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 24

[node name="hurtbox" type="Area2D" parent="."]
modulate = Color( 1, 0.0156863, 0.0156863, 1 )
position = Vector2( 0, -2 )
collision_layer = 32
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0.5, 5 )
shape = SubResource( 8 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( -30, 0 )
collision_mask = 2

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="headCollider" type="Area2D" parent="."]
collision_mask = 16

[node name="collision" type="CollisionShape2D" parent="headCollider"]
position = Vector2( -1, -6.5 )
shape = SubResource( 20 )

[node name="jumpFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
max_distance = 1e+06
attenuation = 1e-05

[node name="hurtFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
max_distance = 1e+06
attenuation = 1e-05

[node name="pushRight" type="RayCast2D" parent="."]
position = Vector2( 8, 6 )
scale = Vector2( 1, -1.28317 )
cast_to = Vector2( 7, 0 )
collision_mask = 128

[node name="pushLeft" type="RayCast2D" parent="."]
position = Vector2( -7, 6 )
scale = Vector2( 1, -1.28317 )
cast_to = Vector2( -7, 0 )
collision_mask = 128

[node name="invencible" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="obs" type="Label" parent="."]
margin_left = -194.0
margin_top = -41.0
margin_right = 197.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 21 )
text = "When you are falling 
you become immune to enemy attacks. 
You will not take damage again until you move or jump"
align = 1

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="body_entered" from="headCollider" to="." method="_on_headCollider_body_entered"]
[connection signal="timeout" from="invencible" to="." method="_on_invencible_timeout"]
